--- a/src/html/index.html
+++ b/src/html/index.html
@@ -13,13 +13,13 @@
                 <img class="logo__picture" />
             </div>
             <ul class="nav__list">
-                <li class="nav_element"><a href="#" class="nav__link">Home</a></li>
-                <li class="nav_element"><a href="#" class="nav__link">About</a></li>
-                <li class="nav_element"><a href="#" class="nav__link">Features</a></li>
-                <li class="nav_element"><a href="#" class="nav__link">Screenshots</a></li>
-                <li class="nav_element"><a href="#" class="nav__link">Pricing</a></li>
-                <li class="nav_element"><a href="#" class="nav__link">Testimonials</a></li>
-                <li class="nav_element"><a href="#" class="nav__link">Contact</a></li>
+                <li class="nav__element"><a href="#" class="nav__link">Home</a></li>
+                <li class="nav__element"><a href="#" class="nav__link">About</a></li>
+                <li class="nav__element"><a href="#" class="nav__link">Features</a></li>
+                <li class="nav__element"><a href="#" class="nav__link">Screenshots</a></li>
+                <li class="nav__element"><a href="#" class="nav__link">Pricing</a></li>
+                <li class="nav__element"><a href="#" class="nav__link">Testimonials</a></li>
+                <li class="nav__element"><a href="#" class="nav__link">Contact</a></li>
             </ul>
         </nav>
         
