--- a/src/html/index.html
+++ b/src/html/index.html
@@ -39,6 +39,41 @@
         </div>
         
     </header>
+    <section class="overview__section section">
+        <div class="overview__container container">
+            <div class="overview__row row">
+                <h2 class="overview__heading">overview</h2>
+                <div class="overview__underline">
+                    <span class="overview__underline-dot"></span>
+                    <span class="overview__underline-dot"></span>
+                    <span class="overview__underline-dot"></span>
+                </div>
+                <p class="overview__description">Lorem ipsum dolor sit amet consectetur adipiscing elit donec tempus pellentesque dui vel tristique purus justo vestibulum eget lectus non gravida ultrices</p>
+            </div>
+            <div class="overview__row row">
+                <div class="overview__content">
+                    <i class="overview__icon"></i>
+                    <h3 class="overview__title">Brand Indentity</h3>
+                    <p class="overview__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
+                </div>
+                <div class="overview__content">
+                    <i class="overview__icon"></i>
+                    <h3 class="overview__title">Easy Customize</h3>
+                    <p class="overview__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
+                </div>
+                <div class="overview__content">
+                    <i class="overview__icon"></i>
+                    <h3 class="overview__title">Modern Design</h3>
+                    <p class="overview__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
+                </div>
+                <div class="overview__content">
+                    <i class="overview__icon"></i>
+                    <h3 class="overview__title">Fully Support</h3>
+                    <p class="overview__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
+                </div>
+            </div>
+        </div>
+    </section>
     
 </body>
 </html>
