Finish awesome-screenshots section layout

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -196,34 +196,41 @@
     </section>
     <section class="awesome-screenshots__section section">
         <div class="awesome-screenshots__container container">
-            <div class="topapps-features___row row">
-                <h2 class="topapps-features__heading heading">Awesome screenshots
-                    <div class="topapps-features__underline underline">
+            <div class="awesome-screenshots___row row">
+                <h2 class="awesome-screenshots__heading heading">Awesome screenshots
+                    <div class="awesome-screenshots__underline underline">
                         <i class="fas fa-ellipsis-h dots"></i>
                     </div>
                 </h2>
-                <p class="topapps-features__description paragraph">Lorem ipsum dolor sit amet consectetur adipiscing elit donec tempus pellentesque dui vel tristique purus justo vestibulum eget lectus non gravida ultrices</p>
+                <p class="awesome-screenshots__description paragraph">Lorem ipsum dolor sit amet consectetur adipiscing elit donec tempus pellentesque dui vel tristique purus justo vestibulum eget lectus non gravida ultrices</p>
             </div>
-            <div class="overview__row row">
-                <div class="how-it-works__pictures">
+            <div class="awesome-screenshots__column column">
+                <div class="awesome-screenshots__picture">
                     <figure class="picture__box">
                         <img src="../assets/images/awesome-screenshots-picture-1.png" alt="picture-1" >
                     </figure>
                 </div>
-                <div class="how-it-works__pictures">
+                <div class="awesome-screenshots__picture">
                     <figure class="picture__box">
                         <img src="../assets/images/awesome-screenshots-picture-2.png" alt="picture-1" >
                     </figure>
                 </div>
-                <div class="how-it-works__pictures">
+                <div class="awesome-screenshots__picture">
                     <figure class="picture__box">
                         <img src="../assets/images/awesome-screenshots-picture-3.png" alt="picture-1" >
                     </figure>
                 </div>
-                <div class="how-it-works__pictures">
+                <div class="awesome-screenshots__picture">
                     <figure class="picture__box">
                         <img src="../assets/images/awesome-screenshots-picture-4.png" alt="picture-1" >
                     </figure>
+                </div>
+            </div>
+            <div class="awesome-screenshots__column column">
+                <div class="awesome-screenshots__circles-box">
+                    <i class="far fa-circle dot-alt"></i>
+                    <i class="fas fa-circle dot "></i>
+                    <i class="far fa-circle dot-alt"></i>
                 </div>
             </div>
         </div>
