Finish meet-with-our-team scss layout

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -299,34 +299,40 @@
                         <img src="../assets/images/meet-with-our-team_character-1.png" alt="">
                         <h3 class="meet-with-our-team__character-heading heading">John Hamilton</h3>
                         <h6 class="meet-with-our-team__character-position">CEO</h6>
-                        <a href="" class="meet-with-our-team__link"><i class="fab fa-facebook-f"></i></a>
-                        <a href="" class="meet-with-our-team__link"><i class="fab fa-twitter"></i></a>
-                        <a href="" class="meet-with-our-team__link"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="" class="meet-with-our-team__link"><i class="fab fa-pinterest-p"></i></a>
-                        <a href="" class="meet-with-our-team__link"><i class="fab fa-google-plus-g"></i></a>
-                        <a href="" class="meet-with-our-team__link"><i class="fab fa-behance"></i></a>
+                        <div class="meet-with-our-team__portfolio-links">
+                            <a href="#facebook" class="meet-with-our-team__link"><i class="fab fa-facebook-f"></i></a>
+                            <a href="#twitter" class="meet-with-our-team__link"><i class="fab fa-twitter"></i></a>
+                            <a href="#linkedin" class="meet-with-our-team__link"><i class="fab fa-linkedin-in"></i></a>
+                            <a href="#pinterest" class="meet-with-our-team__link"><i class="fab fa-pinterest-p"></i></a>
+                            <a href="#google-plus" class="meet-with-our-team__link"><i class="fab fa-google-plus-g"></i></a>
+                            <a href="#behance" class="meet-with-our-team__link"><i class="fab fa-behance"></i></a>
+                        </div>
                     </div>
                     <div class="meet-with-our-team__character-content">
                         <img src="../assets/images/meet-with-our-team_character-2.png" alt="">
                         <h3 class="meet-with-our-team__character-heading heading">Daniel Moore</h3>
                         <h6 class="meet-with-our-team__character-position">Developer</h6>
-                        <a href="" class="meet-with-our-team__link"><i class="fab fa-facebook-f"></i></a>
-                        <a href="" class="meet-with-our-team__link"><i class="fab fa-twitter"></i></a>
-                        <a href="" class="meet-with-our-team__link"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="" class="meet-with-our-team__link"><i class="fab fa-pinterest-p"></i></a>
-                        <a href="" class="meet-with-our-team__link"><i class="fab fa-google-plus-g"></i></a>
-                        <a href="" class="meet-with-our-team__link"><i class="fab fa-behance"></i></a>
+                        <div class="meet-with-our-team__portfolio-links">
+                            <a href="#facebook" class="meet-with-our-team__link"><i class="fab fa-facebook-f"></i></a>
+                            <a href="#twitter" class="meet-with-our-team__link"><i class="fab fa-twitter"></i></a>
+                            <a href="#linkedin" class="meet-with-our-team__link"><i class="fab fa-linkedin-in"></i></a>
+                            <a href="#pinterest" class="meet-with-our-team__link"><i class="fab fa-pinterest-p"></i></a>
+                            <a href="#google-plus" class="meet-with-our-team__link"><i class="fab fa-google-plus-g"></i></a>
+                            <a href="#behance" class="meet-with-our-team__link"><i class="fab fa-behance"></i></a>
+                        </div>
                     </div>
                     <div class="meet-with-our-team__character-content">
                         <img src="../assets/images/meet-with-our-team_character-3.png" alt="">
                         <h3 class="meet-with-our-team__character-heading heading">Simon Lamb</h3>
                         <h6 class="meet-with-our-team__character-position">Designer</h6>
-                        <a href="" class="meet-with-our-team__link"><i class="fab fa-facebook-f"></i></a>
-                        <a href="" class="meet-with-our-team__link"><i class="fab fa-twitter"></i></a>
-                        <a href="" class="meet-with-our-team__link"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="" class="meet-with-our-team__link"><i class="fab fa-pinterest-p"></i></a>
-                        <a href="" class="meet-with-our-team__link"><i class="fab fa-google-plus-g"></i></a>
-                        <a href="" class="meet-with-our-team__link"><i class="fab fa-behance"></i></a>
+                        <div class="meet-with-our-team__portfolio-links">
+                            <a href="#facebook" class="meet-with-our-team__link"><i class="fab fa-facebook-f"></i></a>
+                            <a href="#twitter" class="meet-with-our-team__link"><i class="fab fa-twitter"></i></a>
+                            <a href="#linkedin" class="meet-with-our-team__link"><i class="fab fa-linkedin-in"></i></a>
+                            <a href="#pinterest" class="meet-with-our-team__link"><i class="fab fa-pinterest-p"></i></a>
+                            <a href="#google-plus" class="meet-with-our-team__link"><i class="fab fa-google-plus-g"></i></a>
+                            <a href="#behance" class="meet-with-our-team__link"><i class="fab fa-behance"></i></a>
+                        </div>
                     </div>
                 </div>
             </div>
