Add our-pricing html section

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -337,5 +337,46 @@
                 </div>
             </div>
     </section>
+    <section class="our-pricing__section section">
+        <div class="our-pricing__container container">
+            <div class="our-pricing__row row">
+                <h2 class="our-pricing__heading heading">Meet with our team
+                    <div class="our-pricing__underline underline">
+                        <i class="fas fa-ellipsis-h dots"></i>
+                    </div>
+                </h2>
+                <p class="our-pricing__description paragraph">Lorem ipsum dolor sit amet consectetur adipiscing elit donec tempus pellentesque dui vel tristique purus justo vestibulum eget lectus non gravida ultrices</p>
+            </div>
+            <div class="our-pricing__column column">
+                <div class="our-pricing__price-content">
+                    <h3 class="our-pricing__price-heading">Classic</h3>
+                    <p class="our-pricing__price-per-month">$ 9.99 / Month</p>
+                    <p class="our-pricing__storage-file-size">1GB File storage</p>
+                    <p class="our-pricing__limit-products">Ultimated products</p>
+                    <p class="our-pricing support">24/7</p>
+                    <p class="our-pricing__discout">Discount code engine</p>
+                    <button class="our-pricing__buy-btn">Buy</button>
+                </div>
+                <div class="our-pricing__price-content">
+                    <h3 class="our-pricing__price-heading">Premium</h3>
+                    <p class="our-pricing__price-per-month">$ 19.99 / Month</p>
+                    <p class="our-pricing__storage-file-size">1GB File storage</p>
+                    <p class="our-pricing__limit-products">Ultimated products</p>
+                    <p class="our-pricing support">24/7</p>
+                    <p class="our-pricing__discout">Discount code engine</p>
+                    <button class="our-pricing__buy-btn">Buy</button>
+                </div>
+                <div class="our-pricing__price-content">
+                    <h3 class="our-pricing__price-heading">Classic</h3>
+                    <p class="our-pricing__price-per-month">$ 29.99 / Month</p>
+                    <p class="our-pricing__storage-file-size">1GB File storage</p>
+                    <p class="our-pricing__limit-products">Ultimated products</p>
+                    <p class="our-pricing support">24/7</p>
+                    <p class="our-pricing__discout">Discount code engine</p>
+                    <button class="our-pricing__buy-btn">Buy</button>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
