Add get-app-now html section

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -381,5 +381,34 @@
             </div>
         </div>
     </section>
+    <section class="get-app-now__section section">
+        <div class="get-app-now__container container">
+            <div class="get-app-now__row row">
+                <h2 class="get-app-now__heading heading">Get app now
+                    <div class="get-app-now__underline underline">
+                        <i class="fas fa-ellipsis-h dots"></i>
+                    </div>
+                </h2>
+                <p class="get-app-now__description paragraph">Lorem ipsum dolor sit amet consectetur adipiscing elit donec tempus pellentesque dui vel tristique purus justo vestibulum eget lectus non gravida ultrices</p>
+            </div>
+            <div class="get-app-now__column column">
+                <a class="app-store-button button-apple" href="#">
+                    <i class="fab fa-apple"></i>
+                    <span class="app-store-button__text">Download on the</span> 
+                    <span class="app-store-button__store">App Store</span>
+                </a>
+                <a class="app-store-button button-google" href="#">
+                    <i class="fab fa-apple"></i>
+                    <span class="app-store-button__text">Get in on</span> 
+                    <span class="app-store-button__store">Google Play</span>
+                </a>
+                <a class="app-store-button button-windows" href="#">
+                    <i class="fab fa-apple"></i>
+                    <span class="app-store-button__text">Available on the</span> 
+                    <span class="app-store-button__store">Windows Phone</span>
+                </a>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
