Add html section contact-us

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -420,5 +420,25 @@
             </div>
         </div>
     </section>
+    <section class="contact-us__section section">
+        <div class="contact-us__container container">
+            <div class="contact-us__row row">
+                <h2 class="contact-us__heading heading">Contact Us
+                    <div class="contact-us__underline underline">
+                        <i class="fas fa-ellipsis-h dots"></i>
+                    </div>
+                </h2>
+                <p class="contact-us__description paragraph">Lorem ipsum dolor sit amet consectetur adipiscing elit donec tempus pellentesque dui vel tristique purus justo vestibulum eget lectus non gravida ultrices</p>
+            </div>
+        </div>
+        <form class="contact-us__form">
+            <div class="contact-us__fields">
+                <input class="contact-us__input-field input" type="text" placeholder="Name">
+                <input class="contact-us__input-field input" type="email" placeholder="Email">
+            </div>
+            <input class="contact-us__input-field input" type="text" placeholder="Subject">
+            <textarea class="contact-us__input-field input" type="text" placeholder="Message"></textarea>
+        </form>
+    </section>
 </body>
 </html>
